fix dark mode selection colors

--- a/src/applications/miniflux/miniflux.css
+++ b/src/applications/miniflux/miniflux.css
@@ -112,4 +112,9 @@ button {
       black
     );
   }
+
+  ::selection {
+    background-color: color-mix(in oklab, var(--base0b) 20%, white);
+    color: var(--base00);
+  }
 }
